Missed year in NOTICE.html. [0]
Also updated the links--thanks to Barry for spotting this one!

--- a/release/licenses/NOTICE.html
+++ b/release/licenses/NOTICE.html
@@ -31,7 +31,7 @@ function setParentPage() { if (parent.setPage) parent.setPage('License.html',tru
 <!-- InstanceBeginEditable name="MainContent" -->
 <div class="pagetitle">License and Copyright</div>
 <div class="pagesubtitle">McIDAS-V Copyright</div>
-<div style="margin-left: 2em">Copyright &copy; 2007-2008
+<div style="margin-left: 2em">Copyright &copy; 2007-2016
 <br>
 Space Science and Engineering Center (SSEC)
 <br>
@@ -39,6 +39,8 @@ University of Wisconsin - Madison
 <br>
 All Rights Reserved
 <br>
+McIDAS-V is built on Unidata's IDV and SSEC's VisAD libraries, and<br>
+some McIDAS-V source code is based on IDV and VisAD source code.<br>
 <br>
 McIDAS-V is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
 <br>
@@ -64,6 +66,8 @@ This product includes software developed by:
 <li>The jnumeric package (<a href="http://jnumerical.sourceforge.net/" target="_blank">http://jnumerical.sourceforge.net/</a>).</li>
 <li>JAMA: The Java Matrix Package (<a href="http://math.nist.gov/javanumerics/jama/" target="_blank">http://math.nist.gov/javanumerics/jama/</a>).</li>
 <li>JTEM: Java tools for experimental mathematics (<a href="http://www-sfb288.math.tu-berlin.de/~jtem/numericalMethods/index.html" target="_blank">http://www-sfb288.math.tu-berlin.de/~jtem/numericalMethods/index.html</a>).</li>
+<li>FamFamFam Silk icons (<a href="http://www.famfamfam.com/lab/icons/silk/" target="_blank">http://www.famfamfam.com/lab/icons/silk/</a>).</li>
+<li>Tango icons (<a href="http://tango.freedesktop.org/Tango_Icon_Library" target="_blank">http://tango.freedesktop.org/Tango_Icon_Library</a>).</li>
 </ul>
 Please read the different LICENSE files present in the root directory of the McIDAS-V distribution for restrictions on those packages.
 <div class="childlist"></div>
