--- a/release/README.html
+++ b/release/README.html
@@ -2,9 +2,9 @@
 <body>
 <h2>License and Copyright</h2>
 <h3>McIDAS-V</h3>
-Version 1.7u1<br>
+Version 1.8beta1<br>
 <br>
-Copyright&copy; 2007-2018<br>
+Copyright&copy; 2007-2017<br>
 Space Science and Engineering Center (SSEC)<br>
 University of Wisconsin - Madison<br>
 1225 W. Dayton Street, Madison, WI 53706, USA<br>
