[2775] Fixing broken URL in installation
At the end of the installation, there is a link to the McV System Requirements page that was broken since we updated the McIDAS website.  I changed the URL to point to the correct page.

--- a/edu/wisc/ssec/mcidasv/resources/welcome.html
+++ b/edu/wisc/ssec/mcidasv/resources/welcome.html
@@ -10,7 +10,7 @@
     video driver for your system</b>. Even if the system is brand new, the video
     driver may not be the most recent version available.<br><br>
 
-    Please see the <a href="http://www.ssec.wisc.edu/mcidas/software/v/system_req.html">System Requirements for McIDAS-V</a> for 
+    Please see the <a href="https://www.ssec.wisc.edu/mcidas/software/v/download/sysreqs/">System Requirements for McIDAS-V</a> for 
     more information.<br><br>
 
     If you continue to have problems, contact the McIDAS Help Desk by submitting
