Fix URL for forums through Welcome window [2795]

--- a/edu/wisc/ssec/mcidasv/resources/welcome.html
+++ b/edu/wisc/ssec/mcidasv/resources/welcome.html
@@ -14,6 +14,6 @@
     more information.<br><br>
 
     If you continue to have problems, contact the McIDAS Help Desk by submitting
-    a bug report in the <a href="http://www.ssec.wisc.edu/mcidas/forums/">McIDAS-V Support Forums</a>.
+    a bug report in the <a href="https://mcidas.ssec.wisc.edu/forums/">McIDAS-V Support Forums</a>.
   </body>
 </html>
