Add reference to source of city labels [2864]
Also update copyright from 2018 to 2019 (with 2 weeks to spare!).

--- a/release/licenses/NOTICE.html
+++ b/release/licenses/NOTICE.html
@@ -31,7 +31,7 @@ function setParentPage() { if (parent.setPage) parent.setPage('License.html',tru
 <!-- InstanceBeginEditable name="MainContent" -->
 <div class="pagetitle">License and Copyright</div>
 <div class="pagesubtitle">McIDAS-V Copyright</div>
-<div style="margin-left: 2em">Copyright &copy; 2007-2018
+<div style="margin-left: 2em">Copyright &copy; 2007-2019
 <br>
 Space Science and Engineering Center (SSEC)
 <br>
@@ -68,6 +68,7 @@ This product includes software developed by:
 <li>JTEM: Java tools for experimental mathematics (<a href="http://www-sfb288.math.tu-berlin.de/~jtem/numericalMethods/index.html" target="_blank">http://www-sfb288.math.tu-berlin.de/~jtem/numericalMethods/index.html</a>).</li>
 <li>FamFamFam Silk icons (<a href="http://www.famfamfam.com/lab/icons/silk/" target="_blank">http://www.famfamfam.com/lab/icons/silk/</a>).</li>
 <li>Tango icons (<a href="http://tango.freedesktop.org/Tango_Icon_Library" target="_blank">http://tango.freedesktop.org/Tango_Icon_Library</a>).</li>
+<li>Pareto Software, LLC - Simplemaps.com (<a href="https://simplemaps.com/data/world-cities" target="_blank">https://simplemaps.com/data/world-cities</a>).</li>
 </ul>
 Please read the different LICENSE files present in the root directory of the McIDAS-V distribution for restrictions on those packages.
 <div class="childlist"></div>
