--- a/release/README.html
+++ b/release/README.html
@@ -2,7 +2,7 @@
 <body>
 <h2>License and Copyright</h2>
 <h3>McIDAS-V</h3>
-Version 1.9beta1<br>
+Version 1.9<br>
 <br>
 Copyright&copy; 2007-2023<br>
 Space Science and Engineering Center (SSEC)<br>
