Update URLs once again [3135]
Should be the last of these for McV.

--- a/edu/wisc/ssec/mcidasv/data/package.html
+++ b/edu/wisc/ssec/mcidasv/data/package.html
@@ -11,8 +11,8 @@ McIDAS-V specific data choosers.
 
 For overviews, tutorials, examples, guides, and tool documentation, please see:
 <ul>
-  <li><a href="http://www.unidata.ucar.edu/software/idv/docs/userguide/">IDV Users Guide</a>
-  <li><a href="http://www.ssec.wisc.edu/mcidas/">McIDAS Homepage</a>
+  <li><a href="https://docs.unidata.ucar.edu/idv/current/userguide/">IDV Users Guide</a>
+  <li><a href="https://www.ssec.wisc.edu/mcidas/">McIDAS Homepage</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
